2008-03-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.RegexToolkit/RegexToolkitWindow.cs,
	  gtk-gui/MonoDevelop.RegexToolkit.RegexToolkitWindow.cs,
	  gtk-gui/generated.cs, gtk-gui/gui.stetic: Overworked regex toolkit
	  window.

2008-02-28  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.RegexToolkit.RegexToolkitWindow.cs: Fixed "Bug 365624
	  - Widget toolbox are shown unsorted".

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.RegexToolkit.RegexLibraryWindow.cs,
	  gtk-gui/MonoDevelop.RegexToolkit.RegexToolkitWindow.cs: Moved some
	  buttons.

2008-02-09  Mike Krüger <mkrueger@novell.com> 

	* Makefile.am: Managed texteditor is now standard - the gtksourceview1&2 are
	  now optional.

2008-01-29  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* MonoDevelop.RegexToolkit/RegexToolkitWindow.cs: Small workaround to be
	  able to build in mono 1.2.4 (mono 1.2.4 ignores usings in anon
	  delegates).

2008-01-27  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.RegexToolkit/RegexToolkitWindow.cs: Fixed Bug 355842 - Tootips
	  in regex toolkit are excessively persistent.

2008-01-27  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.RegexToolkit/RegexToolkitWindow.cs: Fixed Bug 355842 - Tootips
	  in regex toolkit are excessively persistent.

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.RegexToolkit.addin.xml: Update MD version.

2008-01-15  Michael Hutchinson <mhutchinson@novell.com> 

	* RegexElements.xml: Improve formatting of translatable strings.
	* MonoDevelop.RegexToolkit/RegexToolkitWindow.cs: Actually feed translatable
	  strings from xml file through Gettext.

2007-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.RegexToolkit.mdp: Updated project files. The order of extended
	  properties won't change anymore.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/MonoDevelop.RegexToolkit.RegexToolkitWindow.cs,
	  gtk-gui/gui.stetic: Updated.
